# Fughetta

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
pkgs/arch/: PKGBUILD
resources/: io.github.mutsumiuniverse.fughetta.desktop.in  resources.gresource.xml
resources/ui/: drag.ui  playlist.ui  row_menu.ui  source_row.ui  status.ui  window.ui
src/: app.rs  args.rs  css.rs  files.rs  lib.rs  main.rs  playlist.css  style.css  utils.rs
src/drag/: drag.blp
src/playlist/: item.rs  mod.rs  playlist.blp  row_menu.blp  source_row.blp  source_row.rs  view.rs
src/status/: mod.rs  status.blp
src/window/: about.rs  mod.rs  window.blp
