[package]
name = "fughetta"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tracing = "0.1.44"
mutsumi = { git = "https://github.com/MutsumiUniverse/Mutsumi.git" }

[build-dependencies]
glib-build-tools = "0.22"
